tests/golden/errors/fn_order.kso
fn zeta x
  x

fn main
  print "{zeta 1}"
